# BillyWonkaVST

./: .gitattributes  .gitignore  CMakeLists.txt  build_compile.bat  build_config.bat
.github/workflows/: build.yml
DSP/: BLOscillator.cpp  BLOscillator.h  BassReverb.cpp  BassReverb.h  DriveMode.h  EnvelopeGenerator.cpp  EnvelopeGenerator.h  HarmonicReverb.cpp  HarmonicReverb.h  IBassDriver.h  LFOEngine.cpp  LFOEngine.h  MidiInjector.h  MixerSection.cpp  MixerSection.h  ModMatrix.cpp  ModMatrix.h  MoogLadderFilter.cpp  MoogLadderFilter.h  MoogTapeSaturator.cpp  MoogTapeSaturator.h  NoiseGenerator.cpp  NoiseGenerator.h  NoteManager.cpp  NoteManager.h  OscillatorBank.cpp  OscillatorBank.h  OutputStage.cpp  OutputStage.h  PitchEnvelope.cpp  PitchEnvelope.h  PortamentoEngine.cpp  PortamentoEngine.h  RnBCompressor.cpp  RnBCompressor.h  SubHarmonicExciter.cpp  SubHarmonicExciter.h  SymmetricFolder.cpp  SymmetricFolder.h  SynthEngine.cpp  (+4 more)
MCEServer/: package-lock.json  package.json  server.js
Presets/Factory/: 808_Classic.xml  808_Distorted.xml  808_Punchy.xml  808_Sliding.xml  808_Trap_Sub.xml  Hybrid_808_Reese.xml  Hybrid_Future_RnB.xml  Hybrid_Pluck_Reese.xml  Hybrid_Sub_Pluck.xml  Hybrid_Vintage_Moog.xml  Pluck_Bright_Club.xml  Pluck_Deep.xml  Pluck_Funk.xml  Pluck_LoFi.xml  Pluck_Warm_RnB.xml  Reese_Aggressive.xml  Reese_Dark.xml  Reese_NeoSoul.xml  Reese_Subtle.xml  Reese_Wide.xml
Source/: PluginEditor.cpp  PluginEditor.h  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h
UI/: ADSRDisplay.cpp  ADSRDisplay.h  AIAssistTab.cpp  AIAssistTab.h  BWColours.h  BWKnob.cpp  BWKnob.h  BWLookAndFeel.cpp  BWLookAndFeel.h  FilterTab.cpp  FilterTab.h  HeaderBar.cpp  HeaderBar.h  MCEClient.cpp  MCEClient.h  MainTab.cpp  MainTab.h  SettingsTab.cpp  SettingsTab.h
scripts/: README_mac.txt  install_mac.sh
